Sun Apr 19 06:57:04 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * ace/UUID.h:
        * ace/UUID.inl:
        * ace/UUID.cpp:
        * tests/UUID_Test.cpp:

          Redesigned the internal structure of the UUID so that its key
          data members are a contiguous chunk of memory.

          Implemented a hash () method for the UUID. This will enable it
          to be used in ACE_Hash_Map_Manager objects.

          Remvoed the default constructor (), copy constructor () and
          assignmetnt operator from the UUID_Node object since the UUID
          performs such operations.

Fri Apr 17 15:06:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/patches/19-gcc43.dpatch:
          Removed, not needed anymore

Fri Apr 17 15:03:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.{h,inl}:
          Added support for VxWorks vxAtomicLib. If you want to use
          that library add ACE_HAS_VXATOMICLIB to your config.h file

        * ace/config-vxworks6.4.h:
          VxWorks 6.4 has cpuset_t and taskCpuAffinitySet

        * ace/os_include/os_sched.h:
          VxWorks has cpuset_t

        * ace/OS_NS_sys_mman.inl:
          Updated VxWorks version checks

        * ace/OS_NS_sys_utsname.cpp:
          const change

        * ace/OS_NS_Thread.cpp:
          Added support for taskCpuAffinitySet

        * ace/Sock_Connect.cpp:
          Changed the checks for VxWorks to correctly detect which
          implementation of get_ip_interfaces we have to use

        * rpmbuild/ace-tao-orbsvcs-daemon.patch:
          This patch doesn't work anymore with svn head, if this
          is a real issue, it has to be addressed in the real code
          and not with a patch. This should already be possible with
          the -ORBDeamon flag

        * rpmbuild/ace-tao-ciao.spec:
          Don't apply ace-tao-orbsvcs-daemon.patch, fixed a small
          provides bug
