@@ -367,6 +367,7 @@
 
 #define ACE_HAS_3_PARAM_READDIR_R
 
+#define ACE_LACKS_STRUCT_LIFNUM
 
 //////////////////////////////////////////////////////////////////////////
 //
